# lrcnab

./: Cargo.toml  README.md  flake.nix
src/: entry.rs  main.rs  scan.rs  watcher.rs
src/client/: file.rs  mod.rs  track_lyrics.rs
