[package]
name = "lrcnab"
version = "0.1.0"
edition = "2024"

[dependencies]
async-walkdir = "2.1.0"
color-eyre = "0.6.5"
futures = "0.3.31"
lofty = "0.23.1"
reqwest = { version = "0.13.2", features = ["query"] }
thiserror = "2.0.18"
tokio = { version = "1.49.0", features = ["rt-multi-thread", "io-util", "net", "sync"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
