[package]
name = "lrcnab"
version = "0.1.0"
edition = "2024"

[dependencies]
async-walkdir = "2.1.0"
color-eyre = "0.6.5"
const_format = "0.2.35"
futures = "0.3.31"
lofty = "0.23.1"
notify-debouncer-full = "0.7.0"
reqwest = { version = "0.13.2", features = ["json", "query"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
tokio = { version = "1.49.0", features = [
    "rt-multi-thread",
    "io-util",
    "net",
    "sync",
    "macros",
    "fs",
] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
